--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+@font-face {
+  font-family: 'Nexa';
+  src: url('/fonts/Nexa-Regular.woff2') format('woff2'),
+       url('/fonts/Nexa-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Nexa';
+  src: url('/fonts/Nexa-Bold.woff2') format('woff2'),
+       url('/fonts/Nexa-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+
+
 .sans {
   font-family: "Roboto Serif", serif;
   font-optical-sizing: auto;
@@ -15,14 +33,10 @@ body {
 
   margin: 0;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "roboto", serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Nexa', sans-serif;
 }
+
 
 p {
   font-family: "Roboto", sans;
