--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ html {
 body {
   overflow-y: scroll;
 }
+
+@keyframes float-around {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(20px, 20px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
